# MPC_XU

./: CMakeLists.txt  README.md
Inc/: convex_mpc.hpp  params.hpp  robot_controller.hpp  robot_model.hpp  robot_state.hpp  utils.hpp
Src/: convex_mpc.cpp  main.cpp  robot_controller.cpp  robot_model.cpp  robot_state.cpp
rsc/anymal_c/: anymal.urdf
